# skill-plan-to-project

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  RELEASING.md  SKILL.md  package-lock.json  package.json  pyproject.toml
.claude/commands/: plan-to-project.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  create-issue-for-agents-md-body.md  release.yml  schrodinger-issue-plan-body.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-request.yml  feature-request.yml
.github/docs/examples/: confluence-attachments-success-story.md
.github/docs/philosophy/: baseline-first-testing.md  independent-verification.md  security-vulnerability-management.md  tdd-principles.md
.github/docs/processes/: azure-ai-agent-guide.md  cross-platform-considerations.md  development-workflow.md  documentation-tracking-guide.md  environment-setup-guide.md  moscow-prioritization-guide.md  playwright-ui-ux-testing.md  release-scaffolding-guide.md
.github/docs/standards/: code-quality-standards.md  pre-commit-verification.md  testing-requirements.md
.github/instructions/: security.instructions.md  testing.instructions.md
.github/skills/.system/skill-creator/scripts/: generate_openai_yaml.py  init_skill.py
.github/skills/.system/skill-installer/scripts/: install-skill-from-github.py  list-skills.py
.github/skills/doc/scripts/: render_docx.py
.github/skills/gh-address-comments/: SKILL.md
.github/skills/gh-address-comments/scripts/: fetch_comments.py
.github/skills/gh-fix-ci/scripts/: inspect_pr_checks.py
.github/skills/imagegen/scripts/: image_gen.py
.github/skills/mermaid/: SKILL.md
.github/skills/mermaid/agents/: openai.yaml
.github/skills/mermaid/fixtures/llm-repair/: 01-broken-flowchart.mmd  02-broken-sequence.mmd
.github/skills/mermaid/references/: prerequisites.md  workflow.md
.github/skills/mermaid/scripts/: check_env.py  iterate_mermaid.py  llm_config.py  run_llm_repair_fixtures.py  setup_azure_openai_env.py
.github/skills/schrodinger-issue/: SKILL.md
.github/skills/schrodinger-issue/agents/: openai.yaml
.github/skills/schrodinger-issue/scripts/: create_issue.py
.github/skills/screenshot/scripts/: take_screenshot.py
.github/skills/security-ownership-map/scripts/: build_ownership_map.py  community_maintainers.py  query_ownership.py
.github/skills/sentry/scripts/: sentry_api.py
.github/skills/slides/scripts/: create_montage.py  detect_font.py  ensure_raster_image.py  render_slides.py  slides_test.py
.github/skills/sora/scripts/: sora.py
.github/skills/speech/scripts/: text_to_speech.py
.github/skills/transcribe/scripts/: transcribe_diarize.py
.github/workflows/: claude-code-review.yml  copilot-setup-steps.yml  create-issue-for-agents-md.yml  create-schrodinger-issue.yml  release.yml
agents/: openai.yaml
assets/: __init__.py  cursor-plan-to-project.mdc  template-epic.md  template-initiative.md  template-scope.md  template-story.md  template-task.md
references/: compliance-rules.md  design-decisions.md  gh-cli-patterns.md  github-graphql.md  plan-format.md  sub-issues-api.md
scripts/: compliance_check.py  constants.py  create_issues.py  gh_helpers.py  install_codex.py  mint_app_token.py  queue_order.py  refresh_subtree.py  set_project_fields.py  set_relationships.py  use-app-token.sh
scripts/sbr/: __init__.py  api.py  cli.py  investigations.py  mcp_server.py
scripts/tests/: conftest.py  test_amend_mode.py  test_codex_installer.py  test_coverage_boost.py  test_create_issues.py  test_ep001_skill_structure.py  test_ep002_ep003_scripts.py  test_gh_helpers.py  test_integration.py  test_mint_app_token.py  test_plan_parser.py  test_refresh_subtree.py  test_sbr_api.py  test_sbr_cli.py  test_sbr_investigations.py  test_sbr_mcp_http.py  test_sbr_mcp_server.py  test_site.py
site/: about.html  app.js  index.html  styles.css
