[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-to-project"
version = "0.1.0"
description = "GitHub Copilot skill: convert a markdown plan into a GitHub Project backlog"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
addopts = "-v --cov=scripts --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = [".github/skills"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = [
    "S603",   # subprocess without shell — we use list args intentionally
    "S607",   # partial path to executable — gh is expected on PATH
]

[tool.ruff.lint.per-file-ignores]
"scripts/tests/*" = ["S101"]  # assert is expected in tests

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
