[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-to-project"
version = "0.1.0"
description = "GitHub Copilot skill: convert a markdown plan into a GitHub Project backlog"
requires-python = ">=3.9"
dependencies = [
    "PyJWT>=2.8",
    "cryptography>=42",
    "mcp>=1.0",
]

[project.scripts]
plan-to-project-install = "scripts.install_codex:main"
sbr = "scripts.sbr.cli:main"
sbr-mcp-server = "scripts.sbr.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.setuptools]
packages = ["scripts", "scripts.sbr"]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
addopts = "-v --cov=scripts --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = [".github/skills"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = [
    "S603",   # subprocess without shell — we use list args intentionally
    "S607",   # partial path to executable — gh is expected on PATH
]

[tool.ruff.lint.per-file-ignores]
"scripts/tests/*" = [
    "S101",  # assert is expected in tests
    "S105",  # hardcoded-password-string — tests use literal fake tokens
    "S106",  # hardcoded-password-func-arg — tests pass literal fake tokens
]

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
