[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-to-project"
version = "0.1.0"
description = "GitHub Copilot skill: convert a markdown plan into a GitHub Project backlog"
requires-python = ">=3.9"
dependencies = [
    "PyJWT>=2.8",
    "cryptography>=42",
    "mcp>=1.0",
]

[project.scripts]
plan-to-project-install = "scripts.install_codex:main"
sbr = "scripts.sbr.cli:main"
sbr-mcp-server = "scripts.sbr.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.setuptools]
packages = ["scripts", "scripts.sbr", "assets"]
include-package-data = true

# Bundle the KDTIX markdown templates + icon with the wheel so
# scripts.create_issues._load_template() can find them after a
# pip install.  Fixes the 2026-04-23 P0: the hosted SBR container's
# site-packages lacked `assets/` entirely, _load_template returned
# "", and generate_body silently fell through to _body_scope (which
# emits placeholder stubs that blanked issue #182 from 9,977 → 1,088
# chars).  The WriteBacker was also rewritten to a surgical section-
# replace strategy that doesn't depend on templates — so even if
# packaging breaks again, write-back stays data-safe.
[tool.setuptools.package-data]
assets = ["*.md", "*.mdc", "*.png"]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
addopts = "-v --cov=scripts --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = [".github/skills"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = [
    "S603",   # subprocess without shell — we use list args intentionally
    "S607",   # partial path to executable — gh is expected on PATH
]

[tool.ruff.lint.per-file-ignores]
"scripts/tests/*" = [
    "S101",  # assert is expected in tests
    "S105",  # hardcoded-password-string — tests use literal fake tokens
    "S106",  # hardcoded-password-func-arg — tests pass literal fake tokens
    "S108",  # insecure temp file — tests use /tmp/ literal paths without real I/O
]

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
